compiler/toc_hir_lowering/tests/snapshots/lowering__lower_case_stmt-4.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "\n    var a : int\n    case s of\n    label 1:\n        var a := a + 1\n    label 2, 3:\n        var a := a + 2\n    label 4:\n        var a := a + 3\n    end case\n    "

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(4)
    Module@(FileId(1), 0..159): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..154): []
        StmtItem@(FileId(1), 5..16): ItemId(0)
          ConstVar@(FileId(1), 5..16): var "a"@(FileId(1), 9..10)
            Primitive@(FileId(1), 13..16): Int
        Case@(FileId(1), 21..154)
          Name@(FileId(1), 26..27): "s"@(FileId(1), 26..27), undeclared
          Literal@(FileId(1), 41..42): Integer(1)
          StmtItem@(FileId(1), 52..66): ItemId(1)
            ConstVar@(FileId(1), 52..66): var "a"@(FileId(1), 56..57)
              ExprBody@(FileId(1), 61..66)
                Binary@(FileId(1), 61..66): Add
                  Name@(FileId(1), 61..62): "a"@(FileId(1), 9..10)
                  Literal@(FileId(1), 65..66): Integer(1)
          Literal@(FileId(1), 77..78): Integer(2)
          Literal@(FileId(1), 80..81): Integer(3)
          StmtItem@(FileId(1), 91..105): ItemId(2)
            ConstVar@(FileId(1), 91..105): var "a"@(FileId(1), 95..96)
              ExprBody@(FileId(1), 100..105)
                Binary@(FileId(1), 100..105): Add
                  Name@(FileId(1), 100..101): "a"@(FileId(1), 9..10)
                  Literal@(FileId(1), 104..105): Integer(2)
          Literal@(FileId(1), 116..117): Integer(4)
          StmtItem@(FileId(1), 127..141): ItemId(3)
            ConstVar@(FileId(1), 127..141): var "a"@(FileId(1), 131..132)
              ExprBody@(FileId(1), 136..141)
                Binary@(FileId(1), 136..141): Add
                  Name@(FileId(1), 136..137): "a"@(FileId(1), 9..10)
                  Literal@(FileId(1), 140..141): Integer(3)

