compiler/toc_hir_lowering/tests/snapshots/lowering__lower_case_stmt-7.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "\n    var a : int\n    case s of\n    label 1:\n        var a := a + 1\n    label 2, 3:\n        var a := a + 2\n    label 4:\n        var a := a + 3\n    label :\n        var a := a + 4\n    label 5:\n        var a := a + 5\n    label 6:\n        var a := a + 6\n    end case\n    "

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(7)
    Module@(FileId(1), 0..266): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..261): []
        StmtItem@(FileId(1), 5..16): ItemId(0)
          ConstVar@(FileId(1), 5..16): var "a"@(FileId(1), 9..10)
            Primitive@(FileId(1), 13..16): Int
        Case@(FileId(1), 21..261)
          Name@(FileId(1), 26..27): "s"@(FileId(1), 26..27), undeclared
          Literal@(FileId(1), 41..42): Integer(1)
          StmtItem@(FileId(1), 52..66): ItemId(1)
            ConstVar@(FileId(1), 52..66): var "a"@(FileId(1), 56..57)
              ExprBody@(FileId(1), 61..66)
                Binary@(FileId(1), 61..66): Add
                  Name@(FileId(1), 61..62): "a"@(FileId(1), 9..10)
                  Literal@(FileId(1), 65..66): Integer(1)
          Literal@(FileId(1), 77..78): Integer(2)
          Literal@(FileId(1), 80..81): Integer(3)
          StmtItem@(FileId(1), 91..105): ItemId(2)
            ConstVar@(FileId(1), 91..105): var "a"@(FileId(1), 95..96)
              ExprBody@(FileId(1), 100..105)
                Binary@(FileId(1), 100..105): Add
                  Name@(FileId(1), 100..101): "a"@(FileId(1), 9..10)
                  Literal@(FileId(1), 104..105): Integer(2)
          Literal@(FileId(1), 116..117): Integer(4)
          StmtItem@(FileId(1), 127..141): ItemId(3)
            ConstVar@(FileId(1), 127..141): var "a"@(FileId(1), 131..132)
              ExprBody@(FileId(1), 136..141)
                Binary@(FileId(1), 136..141): Add
                  Name@(FileId(1), 136..137): "a"@(FileId(1), 9..10)
                  Literal@(FileId(1), 140..141): Integer(3)
          StmtItem@(FileId(1), 162..176): ItemId(4)
            ConstVar@(FileId(1), 162..176): var "a"@(FileId(1), 166..167)
              ExprBody@(FileId(1), 171..176)
                Binary@(FileId(1), 171..176): Add
                  Name@(FileId(1), 171..172): "a"@(FileId(1), 9..10)
                  Literal@(FileId(1), 175..176): Integer(4)
          Literal@(FileId(1), 187..188): Integer(5)
          StmtItem@(FileId(1), 198..212): ItemId(5)
            ConstVar@(FileId(1), 198..212): var "a"@(FileId(1), 202..203)
              ExprBody@(FileId(1), 207..212)
                Binary@(FileId(1), 207..212): Add
                  Name@(FileId(1), 207..208): "a"@(FileId(1), 9..10)
                  Literal@(FileId(1), 211..212): Integer(5)
          Literal@(FileId(1), 223..224): Integer(6)
          StmtItem@(FileId(1), 234..248): ItemId(6)
            ConstVar@(FileId(1), 234..248): var "a"@(FileId(1), 238..239)
              ExprBody@(FileId(1), 243..248)
                Binary@(FileId(1), 243..248): Add
                  Name@(FileId(1), 243..244): "a"@(FileId(1), 9..10)
                  Literal@(FileId(1), 247..248): Integer(6)
error in file FileId(1) at 181..248: extra ‘label’ arms found after default arm
| error in file FileId(1) for 181..248: extra ‘label’ arms

